<resources>
    <string name="app_name">ReServe</string>
    <string name="app_version">Version: 0.0.1 - Oct. 30th, 2018</string>
    <string name="browse">Browse</string>
    <string name="browse_description">Search for restaurants</string>
    <string name="restaurant">Restaurant</string>
    <string name="restconfig">Restaurant Configuration</string>
    <string name="restconfig2">Manage restaurant information</string>
    <string name="restsignup">Restaurant Sign Up</string>
    <string name="restsignup2">Signup your restaurant</string>
    <string name="waittime">Wait Time</string>
    <string name="waittime2">Calculate current wait time</string>
    <string name="customer">Customer</string>
    <string name="reservations">Reservations</string>
    <string name="employee">Employee</string>
    <string name="not_ready">Not Ready</string>
    <string name="account">Account</string>
    <string name="settings_and_information">Settings and information</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Configuration</string>
    <string name="unknown">Unknown</string>
    <string name="manage_reservations">Manage reservations</string>
    <string name="reserve">ReServe</string>
    <string name="olive_garden">Olive Garden</string>
    <string name="olive_garden_description">mediocre italian cuisine</string>
    <string name="rating">9.1/10</string>
    <string name="email">Email address</string>

    <!--Preferences-->
    <string name="preference_email_address">preference_email_address
    </string>
    <string name="preference_employee_status">preference_employee_status</string>
    <string name="preference_max_distance">preference_max_distance</string>
    <string name="preference_password">preference_password</string>

    <string name="preference_login_status">preference_login_status</string>
    <string name="title_activity_restaurant_config">RestaurantConfig</string>
    <string name="title_activity_restaurant_wait_time">RestaurantWaitTime</string>
</resources>
