<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
<PreferenceCategory
    android:title="Account Info"></PreferenceCategory>
    <Preference
        android:key="@string/preference_email_address"
        android:title="@string/email"
        android:defaultValue="admin"></Preference>
    <Preference
        android:key="@string/preference_employee_status"
        android:title="Employment status"
        android:defaultValue="Non-employee user"></Preference>
    <ListPreference
        android:title="Max Distance"
        android:entries="@array/distance_entries"
        android:entryValues="@array/distance_values"
        android:key="@string/preference_max_distance"
        android:defaultValue="10"></ListPreference>
</PreferenceScreen>