<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteSmoke"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_weight="0"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/restaurant" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svButtons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/WhiteSmoke">

        <LinearLayout
            android:id="@+id/layoutButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/WhiteSmoke"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutSpacer"
                android:layout_width="match_parent"
                android:layout_height="6dp"
                android:layout_weight="0"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:id="@+id/layoutBrowse"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0"
                android:background="@color/White"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:paddingLeft="5dp"
                    android:paddingTop="12dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="0dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/delete" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:clickable="false"
                        android:paddingTop="8dp"
                        android:text="@string/browse"
                        android:textColor="@color/Gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvRemoteCommands"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:clickable="false"
                        android:text="@string/browse_description"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutReservations"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0"
                android:background="@color/White"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivVehicleStatus"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:clickable="true"
                    android:paddingLeft="5dp"
                    android:paddingTop="12dp"
                    android:paddingRight="5dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/edit" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:paddingTop="5dp"
                        android:text="@string/reservations"
                        android:textColor="@color/Gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/manage_reservations"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEmployee"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="0"
                android:background="@color/White"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:paddingLeft="5dp"
                    android:paddingTop="12dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="5dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/checkmark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:paddingTop="8dp"
                        android:text="@string/employee"
                        android:textColor="@color/Gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvTireStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/employee"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutSettings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="1dp"
                android:background="@color/White"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:paddingLeft="5dp"
                    android:paddingTop="12dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="3dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/settings" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:clickable="false"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:paddingTop="8dp"
                        android:text="@string/account"
                        android:textColor="@color/Gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvPhoneLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:clickable="false"
                        android:text="@string/settings_and_information"
                        android:textColor="@color/Black"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>